--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "ajv": "^8.17.1",
     "axios": "^1.13.2",
     "framer-motion": "^12.23.24",
+    "lucide-react": "^0.553.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.9.6",
